# kio-locate

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  KUrlCompat.cpp  KUrlCompat.h  UrlUtils.cpp  UrlUtils.h  kio_locate.cpp  kio_locate.h  kio_locate.kcfg  klocateconfig.kcfgc  klocateconfigfilterwidget.ui  klocateconfiglocatewidget.ui  klocateconfigwidget.ui  locate.desktop  locate.protocol  locater.cpp  locater.h  locater.protocol  pattern.cpp  pattern.h  rlocate.protocol
doc/en/: CMakeLists.txt  index.docbook
po/: CMakeLists.txt  cs.po  de.po  el.po  fr.po  kio-locate.pot  messages.sh
